--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
                 <div class="carousel-item"><img class="w-100 d-block pulse mine1" src="assets/img/slider-2.webp" alt="Bug Bounty and VAPT">
                     <div class="carousel-caption caption2">
-                        <h3>Vulnerabilities and Bug Bounty</h3>
+                        <h3>Cyber Security as a Profession</h3>
                         <p>Learn to find bugs and use the bounty platforms to the fullest. Who knows you might discover a serious issue</p>
                   </div>
                 </div>
