--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="carousel-inner">
                 <div class="carousel-item active"><img class="w-100 d-block pulse mine" src="assets/img/ethical_hacking_online_course.webp" alt="Ethical Hacking Online Course">
                     <div class="carousel-caption caption1">
-                            <h1>Ethical Hacking made easy</h1>
+                            <h1>Cyber Security made easy</h1>
                             <p>We have covered every small bit which can create a huge impact on the systems</p>
                       </div>
                 </div>
