--- a/index.html
+++ b/index.html
@@ -102,19 +102,19 @@
             <div class="carousel-inner">
                 <div class="carousel-item active"><img class="w-100 d-block pulse mine" src="assets/img/ethical_hacking_online_course.webp" alt="Ethical Hacking Online Course">
                     <div class="carousel-caption caption1">
-                            <h1>Cyber Security made easy</h1>
+                            <h1>Cyber Security as a Profession</h1>
                             <p>We have covered every small bit which can create a huge impact on the systems</p>
                       </div>
                 </div>
                 <div class="carousel-item"><img class="w-100 d-block pulse mine1" src="assets/img/slider-2.webp" alt="Bug Bounty and VAPT">
                     <div class="carousel-caption caption2">
-                        <h3>Cyber Security as a Profession</h3>
+                        <h3>A Learn and Earn Platform</h3>
                         <p>Learn to find bugs and use the bounty platforms to the fullest. Who knows you might discover a serious issue</p>
                   </div>
                 </div>
                 <div class="carousel-item"><img class="w-100 d-block pulse mine2" src="assets/img/slider-3.webp" alt="Learn and Earn">
                     <div class="carousel-caption caption3">
-                        <h3>A Learn and Earn Initiative</h3>
+                        <h3>Ehical Hacking made Easy</h3>
                         <p>Our Philosophy has always been "for the people by the people"</p>
                   </div>
                 </div>
