--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </div>
                 <div class="carousel-item"><img class="w-100 d-block pulse mine2" src="assets/img/slider-3.webp" alt="Learn and Earn">
                     <div class="carousel-caption caption3">
-                        <h3>Ehical Hacking made Easy</h3>
+                        <h3>Ethical Hacking made Easy</h3>
                         <p>Our Philosophy has always been "for the people by the people"</p>
                   </div>
                 </div>
