--- a/masterclass/index.html
+++ b/masterclass/index.html
@@ -1431,7 +1431,9 @@ HOST: Sanchay Singh, Cybersecurity Expert, Trainer and Public Speaker (Co-Founde
 			<!-- end Zigzag Wave Seperator --></div><div id="uc_grid_1_38584_row_6_container_1_col_1_addon_3" class="uc-grid-col-addon"><!-- start Lead Form -->
 
 			<div id="uc_blox_lead_form397200" class="uc_form_wrapper">
-<form class="uc-form" name="uc_form_form1">
+
+				<form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_Le0cz87tGMRnov" async> </script> </form>
+<!-- <form class="uc-form" name="uc_form_form1">
 	<div class="uc-form-content">
 
 
@@ -1446,7 +1448,7 @@ HOST: Sanchay Singh, Cybersecurity Expert, Trainer and Public Speaker (Co-Founde
 		<div class="uc-form-error" style="display:none"></div>
 	</div>
 	<div class="uc-form-success" style="display:none">Thank you for contacting us</div>
-</form>
+</form> -->
 
 <div style="clear:both"></div>
 </div>
