header-footer updated

--- a/privacy.html
+++ b/privacy.html
@@ -60,57 +60,53 @@
             </div>
         </nav>
     </header>
-    <section class="about-us">
-        <div class="col" style="width: auto;">
-            <h1 class="text-center" style="color: var(--bs-indigo);font-weight: bold;margin-top: 50px;">ABOUT US</h1>
+  
+<div class="container-fluid ">    
+  <div class="row content">
+    <div class="col-sm-2 sidenav">
+
+    </div>
+    <div class="col-sm-8 text-left"> <br><br>
+        
+
+
+
+    </div>
+    <div class="col-sm-2 sidenav">
+    </div>
+  </div>
+</div>
+
+<footer>
+    <div class="row">
+        <div class="col-sm-6 col-md-4 footer-navigation">
+            <h3><a href="/" style="background: url(&quot;assets/img/hackersvilla_white.png&quot;) center / cover no-repeat;padding: 6px;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></h3>
+            <p class="links"><a href="home">Home</a><strong> · </strong><a href="masterclass/">MasterClass</a><strong> · </strong><a href="/#pricing">Pricing</a><strong> · </strong><a href="about">About</a><strong> · </strong><a href="/#faq">Faq</a><strong> · </strong><a href="contact">Contact</a><br><a href="terms">Terms and Conditions</a><strong> · </strong><a href="privacy">Privacy</a><strong> · </strong><a href="refund">Refund Policies</a></p>
+            <p class="company-name"><br>HackersVilla Cybersecurity Pvt Ltd&nbsp;© 2021</p>
         </div>
-        <div class="container">
-            <div class="row padding-content">
-                <div class="col-md-4 no-padding">
-                    <div id="wowslider-container1">
-                        <div class="ws_images">
-                            <ul>
-                                <li><img id="wows1_0" class="img-fluid" src="assets/img/hackersvilla_logo.webp" style="width: 350px;height: 350px;"></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-8 abt-right" style="background: var(--bs-purple);">
-                    <h1 class="text-center" style="margin-top: 30px;">HackersVilla Cybersecurity Pvt Ltd</h1>
-                    <p>HackersVilla, although registered a company, is more of a Community that works on the principle of "For The People; By The People". We at HackersVilla provide professional training and consultancy based on Cyber Security and Ethical Hacking.<br><br>We do have courses for all young minds with the focus of achieving "Learn and Earn Concept" so that to help you converting your Hacking Passion into your Profession. You can be the mentor, be with us in the core team or even lead your own way doing Bug Bounties / VAPT and creating a platform for people with us.&nbsp;<br></p>
-                </div>
+        <div class="col-sm-6 col-md-4 footer-contacts">
+            <div><span class="fa fa-map-marker footer-contacts-icon"> </span>
+                <p><span class="new-line-span">GTB Nagar</span> Delhi, India</p>
             </div>
-        </div>
-    </section>
-    <footer>
-        <div class="row">
-            <div class="col-sm-6 col-md-4 footer-navigation">
-                <h3><a href="/" style="background: url(&quot;assets/img/hackersvilla_white.png&quot;) center / cover no-repeat;padding: 6px;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></h3>
-                <p class="links"><a href="home">Home</a><strong> · </strong><a href="masterclass/">MasterClass</a><strong> · </strong><a href="/#pricing">Pricing</a><strong> · </strong><a href="about">About</a><strong> · </strong><a href="/#faq">Faq</a><strong> · </strong><a href="contact">Contact</a><br><a href="terms">Terms and Conditions</a><strong> · </strong><a href="privacy">Privacy</a><strong> · </strong><a href="refund">Refund Policies</a></p>
-                <p class="company-name"><br>HackersVilla Cybersecurity Pvt Ltd&nbsp;© 2021</p>
+            <div><i class="fa fa-phone footer-contacts-icon"></i>
+                <p class="footer-center-info email text-left"> +91 895-848-7060</p>
             </div>
-            <div class="col-sm-6 col-md-4 footer-contacts">
-                <div><span class="fa fa-map-marker footer-contacts-icon"> </span>
-                    <p><span class="new-line-span">GTB Nagar</span> Delhi, India</p>
-                </div>
-                <div><i class="fa fa-phone footer-contacts-icon"></i>
-                    <p class="footer-center-info email text-left"> +91 895-848-7060</p>
-                </div>
-                <div><i class="fa fa-envelope footer-contacts-icon"></i>
-                    <p> <a href="#" target="_blank" style="color: var(--bs-blue);">support@hackersvilla.xyz</a></p>
-                </div>
-            </div>
-            <div class="col-md-4 footer-about">
-                <h4>About the company</h4>
-                <p> Only community in the market working with a Learn &amp; Earn&nbsp; approach in the fields of Cyber Security &amp; Ethical Hacking,&nbsp;</p>
-                <div class="social-links social-icons"><a href="https://facebook.com/hackersvilla.xyz"><i class="fa fa-facebook" style="border-color: var(--bs-blue);color: var(--bs-white);"></i></a><a href="https://instagram.com/hackersvilla.xyz"><i class="fa fa-instagram" style="color: var(--bs-white);"></i></a><a href="https://linkedin.com/company/hackersvilla"><i class="fa fa-linkedin" style="color: var(--bs-white);"></i></a><a href="https://youtube.com/tech2techyblogspot"><i class="fa fa-youtube" style="color: var(--bs-white);"></i></a></div>
+            <div><i class="fa fa-envelope footer-contacts-icon"></i>
+                <p> <a href="#" target="_blank" style="color: var(--bs-blue);">support@hackersvilla.xyz</a></p>
             </div>
         </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
-    <script src="assets/js/WOWSlider-about-us.js"></script>
-    <script src="assets/js/Scroll-Effect.js"></script>
+
+        <div class="col-md-4 footer-about">
+            <h4>About the company</h4>
+            <p> Only community in the market working with a Learn &amp; Earn&nbsp; approach in the fields of Cyber Security &amp; Ethical Hacking,&nbsp;</p>
+            <div class="social-links social-icons"><a href="https://facebook.com/hackersvilla.xyz"><i class="fa fa-facebook" style="border-color: var(--bs-blue);color: var(--bs-white);"></i></a><a href="https://instagram.com/hackersvilla.xyz"><i class="fa fa-instagram" style="color: var(--bs-white);"></i></a><a href="https://linkedin.com/company/hackersvilla"><i class="fa fa-linkedin" style="color: var(--bs-white);"></i></a><a href="https://youtube.com/tech2techyblogspot"><i class="fa fa-youtube" style="color: var(--bs-white);"></i></a></div>
+        </div>
+    </div>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="assets/js/bs-init.js"></script>
+<script src="assets/js/WOWSlider-about-us.js"></script>
+<script src="assets/js/Scroll-Effect.js"></script>
 </body>
 
 </html>
