--- a/index.html
+++ b/index.html
@@ -532,25 +532,25 @@
                 </div>
                 <div class="col-sm-6 col-md-3 column">
                     <p><i class="far fa-user" aria-hidden="true"></i></p>
-                    <p> <span class="count replay" style="font-size: 28;">50</span></p>
-                    <h2>Students</h2>
+                    <p> <span class="count replay" style="font-size: 28;">24762</span></p>
+                    <h2>Participants</h2>
                 </div>
                 <div class="col-sm-6 col-md-3 column">
                     <p><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" class="bi bi-camera-video" aria-hidden="true" style="font-size: 50px;">
                             <path fill-rule="evenodd" d="M0 5a2 2 0 0 1 2-2h7.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 4.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 13H2a2 2 0 0 1-2-2V5zm11.5 5.175l3.5 1.556V4.269l-3.5 1.556v4.35zM2 4a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h7.5a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1H2z"></path>
                         </svg></p>
-                    <p> <span class="count replay">200</span></p>
-                    <h2>Live Sessions done</h2>
+                    <p> <span class="count replay">193</span></p>
+                    <h2>Free Live Sessions</h2>
                 </div>
                 <div class="col-sm-6 col-md-3 column">
                     <p><i class="far fa-chart-bar" aria-hidden="true"></i></p>
-                    <p> <span class="count">300</span><span class="sup">% </span></p>
-                    <h2>Growth Rate</h2>
+                    <p> <span class="count">2300</span><span class="sup"></span></p>
+                    <h2>Discord Members</h2>
                 </div>
                 <div class="col-sm-6 col-md-3 column">
                     <p><i class="far fa-clock" aria-hidden="true"></i></p>
-                    <p> <span class="count">350</span><span class="sup"></span></p>
-                    <h2>Hours of learning</h2>
+                    <p> <span class="count">91560</span><span class="sup"></span></p>
+                    <h2>Minutes of learning</h2>
                 </div>
             </div>
         </div>
