--- a/terms.html
+++ b/terms.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>About Us | HackersVilla Cybersecurity</title>
+    <script src="https://kit.fontawesome.com/48654792fb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/Header-Dark-1.css">
@@ -418,20 +419,20 @@
         </div>
         <div class="col-sm-6 col-md-4 footer-contacts">
             <div><span class="fa fa-map-marker footer-contacts-icon"> </span>
-                <p><span class="new-line-span">GTB Nagar</span> Delhi, India</p>
+                <p><span class="new-line-span">4th floor, 293, Parmanand Colony</span>Mukherjee Nagar, Delhi - 09</p>
             </div>
             <div><i class="fa fa-phone footer-contacts-icon"></i>
-                <p class="footer-center-info email text-left"> +91 895-848-7060</p>
+                <p class="footer-center-info email text-left"> 8958487060, 8826368618</p>
             </div>
             <div><i class="fa fa-envelope footer-contacts-icon"></i>
-                <p> <a href="#" target="_blank" style="color: var(--bs-blue);">support@hackersvilla.xyz</a></p>
+                <p> <a href="#" target="_blank" style="color: var(--bs-cyan);">support@hackersvilla.xyz, <br>hackersvilla.xyz@gmail.com</a></p>
             </div>
         </div>
 
         <div class="col-md-4 footer-about">
             <h4>About the company</h4>
-            <p> Only community in the market working with a Learn &amp; Earn&nbsp; approach in the fields of Cyber Security &amp; Ethical Hacking,&nbsp;</p>
-            <div class="social-links social-icons"><a href="https://facebook.com/hackersvilla.xyz"><i class="fa fa-facebook" style="border-color: var(--bs-blue);color: var(--bs-white);"></i></a><a href="https://instagram.com/hackersvilla.xyz"><i class="fa fa-instagram" style="color: var(--bs-white);"></i></a><a href="https://linkedin.com/company/hackersvilla"><i class="fa fa-linkedin" style="color: var(--bs-white);"></i></a><a href="https://youtube.com/tech2techyblogspot"><i class="fa fa-youtube" style="color: var(--bs-white);"></i></a></div>
+            <p>HackersVilla CyberSecurity provides Quality Professional Training with Live Mentors and is based on the Learn & Earn Approach. The company focuses on changing the way of teaching cybersecurity and producing more researchers in the field.</p>
+            <div class="social-links social-icons"><a href="https:///hackersvilla.xyz/discord" target=”_blank”><i class="fa-brands fa-discord" style="border-color: var(--bs-blue);color: var(--bs-white);"></i></a><a href="https://instagram.com/hackersvillaxyz" target=”_blank”><i class="fa fa-instagram" style="color: var(--bs-white);"></i></a><a href="https://linkedin.com/company/hackersvilla" target=”_blank” target=”_blank”><i class="fa fa-linkedin" style="color: var(--bs-white);"></i></a><a href="https://youtube.com/hackersvillacybersecurity" target=”_blank”><i class="fa fa-youtube" style="color: var(--bs-white);"></i></a></div>
         </div>
     </div>
 </footer>
