--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
             <div class="row countup text-center">
                 <div class="col-md-8 offset-md-2 header-numbers">
                     <h2 style="font-size: 28.67;">NOT CONVINCED YET?</h2>
-                    <p><a href="https://bit.do/hack-n-slash">Book your demo session</a> right now and experience the level of Ethical Hacking Online Course yourself. Also we are proud to show you our current stats below. </p>
+                    <p><a href="https://bit.do/hack-n-slash" style="color: var(--bs-cyan);">Book your demo session</a> right now and experience the level of Ethical Hacking Online Course yourself. Also we are proud to show you our current stats below. </p>
                 </div>
                 <div class="col-sm-6 col-md-3 column">
                     <p><i class="far fa-user" aria-hidden="true"></i></p>
