--- a/refund.html
+++ b/refund.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>About Us | HackersVilla Cybersecurity</title>
+    <title>Refunds | HackersVilla Cybersecurity</title>
     <script src="https://kit.fontawesome.com/48654792fb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -69,7 +69,9 @@
     </div>
     <div class="col-sm-8 text-left"> <br><br>
         
-
+        <h1 class="text-center ">Refund Policies</h1>
+        <p class="text-center ">Updated on 01-01-2023</p>
+        <hr><br>
 
         
     </div>
