--- a/masterclass-html/index.html
+++ b/masterclass-html/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Hack-n-Slash MasterClass | Learn Ethical Hacking Online</title>
+    <title>Hack-n-Slash MasterClass | HackersVilla CyberSecurity</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
     <link rel="stylesheet" href="assets/css/accordion-faq-list.css">
@@ -15,6 +15,11 @@
     <link rel="stylesheet" href="assets/css/Hero-Clean-Reverse-images.css">
     <link rel="stylesheet" href="assets/css/Lightbox-Gallery-baguetteBox.min.css">
     <link rel="stylesheet" href="assets/css/Video-Responsive-YouTube-Video-Responsive.css">
+
+    <meta property="og:title" content="Hack-n-Slash MasterClass | Learn Ethical Hacking Online" />
+    <meta property="og:description" content="Discover the Smartest and the Simplest way to Hack any website or OS in 60 minutes. Register now and win bonuses worth ₹25000." />
+    <meta property="og:image" content="https://hackersvilla.xyz/masterclass-html/assets/img/og_image.jpg" />
+    
 </head>
 
 <body style="background: #212121;font-family: Montserrat, sans-serif;color: rgb(255,255,255);padding: 0 20px;opacity: 1;">
