--- a/masterclass/index.html
+++ b/masterclass/index.html
@@ -97,7 +97,7 @@
             <div class="text-white border rounded border-0 p-4 p-md-5" style="margin-top: 25px;background:linear-gradient(90deg, rgba(102,16,242,1) 0%, rgba(111,66,193,1) 100%);">
                 <h2 class="fw-bold text-white mb-3" style="text-align: center;">Yes, I want to Hack any website in 60 minutes</h2>
                 <p class="mb-4" style="text-align: center; font-size: 20px">Join the masterclass now and win bonuses worth Rs. 25,000 for absolutely free.</p>
-                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="#" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;">JOIN NOW</a></div>
+                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="#" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;"><b>JOIN NOW</b></a></div>
             </div>
         </div>
     </section><!-- End: Banner Heading -->
@@ -154,7 +154,7 @@
             <div class="text-white border rounded border-0 p-4 p-md-5" style="margin-top: 0px;background:linear-gradient(90deg, rgba(102,16,242,1) 0%, rgba(111,66,193,1) 100%);">
                 <h2 class="fw-bold text-white mb-3" style="text-align: center;">Yes, I want to Hack any website in 60 minutes</h2>
                 <p class="mb-4" style="text-align: center; font-size: 20px">Join the masterclass now and win bonuses worth Rs. 25,000 for absolutely free.</p>
-                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="#" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;">JOIN NOW</a></div>
+                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="#" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;"><b>JOIN NOW</b></a></div>
             </div>
         </div>
     </section><!-- End: Banner Heading -->
@@ -227,7 +227,7 @@
             <div class="text-white border rounded border-0 p-4 p-md-5" style="margin-top: 10px;background:linear-gradient(90deg, rgba(102,16,242,1) 0%, rgba(111,66,193,1) 100%);">
                 <h2 class="fw-bold text-white mb-3" style="text-align: center;">Yes, I want to get all the Super Powers in 60 minutes</h2>
                 <p class="mb-4" style="text-align: center; font-size: 20px">Join the masterclass now and win bonuses worth Rs. 25,000 for absolutely free.</p>
-                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="#" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;">JOIN NOW</a></div>
+                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="#" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;"><b>JOIN NOW</b></a></div>
             </div>
         </div>
     </section><!-- End: Banner Heading -->
@@ -290,7 +290,7 @@
                         <div class="card-body p-4" style="background: #313131;border-width: 0px;border-color: var(--bs-card-cap-bg);">
                             <h4 class="card-title"><u><i><strong>Resources CheatSheet</strong></i></u></h4>
                             <p class="card-text">Manually compiled list of best and simplest resources for learning Ethical Hacking, Bug Hunting, Red Teaming and Penetration Testing, etc.</p>
-                            <h4 class="card-title" style="font-size: 20px;">Worth&nbsp;<strong><span style="background-color: rgb(33, 33, 33);">₹</span></strong>3000/-</h4>
+                            <h4 class="card-title" style="font-size: 20px;">Worth&nbsp;₹3000/-</h4>
                         </div>
                     </div>
                 </div>
@@ -299,7 +299,7 @@
                         <div class="card-body p-4" style="background: #313131;border-width: 0px;border-color: var(--bs-card-cap-bg);">
                             <h4 class="card-title"><u><i><strong>Softwares &amp; Machines</strong></i></u></h4>
                             <p class="card-text">Legitimate activated softwares and tools needed for learning and practicing along with links to download various virtual machines and how to install/configure them.&nbsp;</p>
-                            <h4 class="card-title" style="font-size: 20px;">Worth&nbsp;<strong><span style="background-color: rgb(33, 33, 33);">₹</span></strong>10000/-</h4>
+                            <h4 class="card-title" style="font-size: 20px;">Worth&nbsp;₹10000/-</h4>
                         </div>
                     </div>
                 </div>
@@ -308,7 +308,7 @@
                         <div class="card-body p-4" style="background: #313131;border-width: 0px;border-color: var(--bs-card-cap-bg);">
                             <h4 class="card-title"><u><i><strong>Exclusive Planner</strong></i></u></h4>
                             <p class="card-text">Sanchay Sir's exclusive planner sheet that contains in-depth roadmap of what and how to learn Networking, Linux, VAPT, WAPT, Cryptography, Reverse Engineering, etc.</p>
-                            <h4 class="card-title" style="font-size: 20px;">Worth&nbsp;<strong><span style="background-color: rgb(33, 33, 33);">₹</span></strong>7000/-</h4>
+                            <h4 class="card-title" style="font-size: 20px;">Worth&nbsp;₹7000/-</h4>
                         </div>
                     </div>
                 </div>
@@ -317,7 +317,7 @@
                         <div class="card-body p-4" style="background: #313131;border-width: 0px;border-color: var(--bs-card-cap-bg);">
                             <h4 class="card-title"><u><i><strong>On-The-Go Handbook</strong></i></u></h4>
                             <p class="card-text">Exclusive handbook specially crafted by HackersVilla Team for on-the-go tricks to exploit systems, create malware, bypass various logins and OTPs and hack like a pro.</p>
-                            <h4 class="card-title" style="font-size: 20px;">Worth&nbsp;<strong><span style="background-color: rgb(33, 33, 33);">₹</span></strong>5000/-</h4>
+                            <h4 class="card-title" style="font-size: 20px;">Worth&nbsp;₹5000/-</h4>
                         </div>
                     </div>
                 </div>
@@ -334,7 +334,7 @@
             <div class="text-white border rounded border-0 p-4 p-md-5" style="margin-top: 10px;background:linear-gradient(90deg, rgba(102,16,242,1) 0%, rgba(111,66,193,1) 100%);">
                 <h2 class="fw-bold text-white mb-3" style="text-align: center;">Yes, I want to get all the Super Powers in 60 minutes</h2>
                 <p class="mb-4" style="text-align: center; font-size: 20px">Join the masterclass now and win bonuses worth Rs. 25,000 for absolutely free.</p>
-                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="#" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;">JOIN NOW</a></div>
+                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="#" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;"><b>JOIN NOW</b></a></div>
             </div>
         </div>
     </section><!-- End: Banner Heading -->
@@ -401,7 +401,7 @@
             <div class="text-white border rounded border-0 p-4 p-md-5" style="margin-top: 10px;background:linear-gradient(90deg, rgba(102,16,242,1) 0%, rgba(111,66,193,1) 100%);">
                 <h2 class="fw-bold text-white mb-3" style="text-align: center;">Yes, I want to get all the Super Powers in 60 minutes</h2>
                 <p class="mb-4" style="text-align: center; font-size: 20px">Join the masterclass now and win bonuses worth Rs. 25,000 for absolutely free.</p>
-                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="#" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;">JOIN NOW</a></div>
+                <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="#" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;"><b>JOIN NOW</b></a></div>
             </div>
         </div>
     </section><!-- End: Banner Heading -->
