404 back button fixed

--- a/404.html
+++ b/404.html
@@ -167,7 +167,7 @@
             <div class="number">4</div>
           </div>
           <div class="subtitle">SHH! The page you requested is in <br>peaceful sleep.</div>
-          <button onclick="window.location='home';">Go back</button>
+          <button onclick="history.back()">Go back</button>
         </div>
       </div>
       
