super power fixed

--- a/masterclass/index.html
+++ b/masterclass/index.html
@@ -332,7 +332,7 @@
     <section class="py-4 py-xl-5">
         <div class="container">
             <div class="text-white border rounded border-0 p-4 p-md-5" style="margin-top: 10px;background:linear-gradient(90deg, rgba(102,16,242,1) 0%, rgba(111,66,193,1) 100%);">
-                <h2 class="fw-bold text-white mb-3" style="text-align: center;">Yes, I want to get all the Super Powers in 60 minutes</h2>
+                <h2 class="fw-bold text-white mb-3" style="text-align: center;">Yes, I want to Hack any website in 60 minutes</h2>
                 <p class="mb-4" style="text-align: center; font-size: 20px">Join the masterclass now and win bonuses worth Rs. 25,000 for absolutely free.</p>
                 <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="#" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;"><b>JOIN NOW</b></a></div>
             </div>
@@ -399,7 +399,7 @@
     <section class="py-4 py-xl-5">
         <div class="container">
             <div class="text-white border rounded border-0 p-4 p-md-5" style="margin-top: 10px;background:linear-gradient(90deg, rgba(102,16,242,1) 0%, rgba(111,66,193,1) 100%);">
-                <h2 class="fw-bold text-white mb-3" style="text-align: center;">Yes, I want to get all the Super Powers in 60 minutes</h2>
+                <h2 class="fw-bold text-white mb-3" style="text-align: center;">Yes, I want to Hack any website in 60 minutes</h2>
                 <p class="mb-4" style="text-align: center; font-size: 20px">Join the masterclass now and win bonuses worth Rs. 25,000 for absolutely free.</p>
                 <div class="my-3" style="text-align: center;"><a class="btn btn-primary btn-lg me-2" role="button" href="#" style="font-weight: bold;text-align: center;color: var(--bs-blue);background: var(--bs-white);font-size: 30px;border: 2px dotted var(--bs-btn-disabled-color); box-shadow: 7px 8px #000000;"><b>JOIN NOW</b></a></div>
             </div>
