--- a/masterclass/index.html
+++ b/masterclass/index.html
@@ -105,13 +105,13 @@
     <div class="container" style="margin-top: 50px;">
         <div class="row">
             <div class="col-md-4" style="margin-bottom: 20px;">
-                <div class="card"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/ScMzIvxBSi4" style="width: 100%;height: 100%;position: absolute;top: 0;left: 0;"></iframe><img class="card-img w-100 d-block" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></div>
+                <div class="card"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/htJm0miNwDg" style="width: 100%;height: 100%;position: absolute;top: 0;left: 0;"></iframe><img class="card-img w-100 d-block" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></div>
             </div>
             <div class="col-md-4" style="margin-bottom: 20px;">
-                <div class="card"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/ScMzIvxBSi4" style="width: 100%;height: 100%;position: absolute;top: 0;left: 0;"></iframe><img class="card-img w-100 d-block" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></div>
+                <div class="card"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/4M12bR3njKc" style="width: 100%;height: 100%;position: absolute;top: 0;left: 0;"></iframe><img class="card-img w-100 d-block" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></div>
             </div>
             <div class="col-md-4" style="margin-bottom: 20px;">
-                <div class="card"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/ScMzIvxBSi4" style="width: 100%;height: 100%;position: absolute;top: 0;left: 0;"></iframe><img class="card-img w-100 d-block" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></div>
+                <div class="card"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/LQExUbFktEc" style="width: 100%;height: 100%;position: absolute;top: 0;left: 0;"></iframe><img class="card-img w-100 d-block" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></div>
             </div>
         </div>
     </div><!-- End: 1 Row 3 Columns -->
