--- a/masterclass/index.html
+++ b/masterclass/index.html
@@ -259,12 +259,12 @@
             <div class="container">
                 <!-- Start: Photos -->
                 <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3" data-bss-baguettebox="">
-                    <div class="col"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></a></div>
-                    <div class="col"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></a></div>
-                    <div class="col"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></a></div>
-                    <div class="col"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></a></div>
-                    <div class="col"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></a></div>
-                    <div class="col"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></a></div>
+                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r1.png"><img class="img-fluid" src="https://hackersvilla.xyz/masterclass/assets/img/r1.png"></a></div>
+                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r2.png"><img class="img-fluid" src="https://hackersvilla.xyz/masterclass/assets/img/r2.png"></a></div>
+                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r3.png"><img class="img-fluid" src="https://hackersvilla.xyz/masterclass/assets/img/r3.png"></a></div>
+                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r4.png"><img class="img-fluid" src="https://hackersvilla.xyz/masterclass/assets/img/r4.png"></a></div>
+                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r5.png"><img class="img-fluid" src="https://hackersvilla.xyz/masterclass/assets/img/r5.png"></a></div>
+                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r6.png"><img class="img-fluid" src="https://hackersvilla.xyz/masterclass/assets/img/r6.png"></a></div>
                 </div><!-- End: Photos -->
             </div>
         </section><!-- End: Lightbox Gallery -->
