--- a/masterclass/index.html
+++ b/masterclass/index.html
@@ -43,7 +43,7 @@
         <div class="row">
             <div class="col-md-6">
                 <!-- Start: Responsive Video Container -->
-                <div style="position: relative;overflow: hidden;padding-top: 56.25%;"><iframe allowfullscreen="" frameborder="0" src="https://youtu.be/IDDoXiBWNzY" style="width: 100%;height: 100%;position: absolute;top: 0;left: 0;"></iframe></div><!-- End: Responsive Video Container -->
+                <div style="position: relative;overflow: hidden;padding-top: 56.25%;"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/IDDoXiBWNzY" style="width: 100%;height: 100%;position: absolute;top: 0;left: 0;"></iframe></div><!-- End: Responsive Video Container -->
             </div>
             <div class="col-md-6">
                 <div class="row">
