meta code added

--- a/masterclass/index.html
+++ b/masterclass/index.html
@@ -16,6 +16,26 @@
     <link rel="stylesheet" href="assets/css/Lightbox-Gallery-baguetteBox.min.css">
     <link rel="stylesheet" href="assets/css/Video-Responsive-YouTube-Video-Responsive.css">
 
+    <!-- Facebook Pixel Code -->
+    <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window,document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+     fbq('init', '967693411344645'); 
+    fbq('track', 'PageView');
+    </script>
+    <noscript>
+     <img height="1" width="1" 
+    src="https://www.facebook.com/tr?id=967693411344645&ev=PageView
+    &noscript=1"/>
+    </noscript>
+    <!-- End Facebook Pixel Code -->
+
     <meta property="og:title" content="Hack-n-Slash MasterClass | Learn Ethical Hacking Online" />
     <meta property="og:description" content="Discover the Smartest and the Simplest way to Hack any website or OS in 60 minutes. Register now and win bonuses worth ₹25000." />
     <meta property="og:image" content="https://hackersvilla.xyz/masterclass/assets/img/og_image.jpg" />
