--- a/masterclass/index.html
+++ b/masterclass/index.html
@@ -68,9 +68,9 @@
             <div class="col-md-6">
                 <div class="row">
                     <div class="col">
-                        <h2 class="text-uppercase fw-bold" style="font-size: 50px;color: var(--bs-white);font-family: Montserrat, sans-serif;text-align: center;margin-top: 30px;">14 May 2023&nbsp;<br>(SUNDAY)</h2>
+                        <h2 class="text-uppercase fw-bold" style="font-size: 50px;color: var(--bs-white);font-family: Montserrat, sans-serif;text-align: center;margin-top: 30px;">31 May 2023&nbsp;<br>(WEDNESDAY)</h2>
                         <div class="row" style="margin-top: 25px;margin-right: 0px;margin-left: 0px;">
-                            <div class="col-lg-12"><a class="btn btn-primary btn-lg" role="button" style="background: linear-gradient(-50deg, var(--bs-blue), var(--bs-purple)), var(--bs-indigo);font-weight: bold;font-size: 30px;font-family: Montserrat, sans-serif;display: block;margin-right: auto;margin-left: auto;width: 150px;margin-bottom: 20px; cursor:text;">5-8PM</a></div>
+                            <div class="col-lg-12"><a class="btn btn-primary btn-lg" role="button" style="background: linear-gradient(-50deg, var(--bs-blue), var(--bs-purple)), var(--bs-indigo);font-weight: bold;font-size: 30px;font-family: Montserrat, sans-serif;display: block;margin-right: auto;margin-left: auto;width: 150px;margin-bottom: 20px; cursor:text;">7-10PM</a></div>
                             <div class="col"><a class="btn btn-outline-primary btn-lg" role="button" style="font-size: 30px;font-weight: bold;color: var(--bs-warning);font-family: Montserrat, sans-serif;border: 2px dashed var(--bs-yellow);display: block;margin-right: auto;margin-left: auto;width: 200px;margin-top: 0px; cursor:text;">3 Hours</a></div>
                         </div>
                     </div>
@@ -86,7 +86,7 @@
     <!-- Start: ♣ Countdown BS4 ♣ -->
     <section class="text-white" style="background: #212121;padding-top: 0px;">
         <!-- Start: Big countdown -->
-        <div class="container text-center boxed-countdown" data-countdown="05/14/2023 17:00:00" style="border-color: var(--bs-blue);background: #212121;">
+        <div class="container text-center boxed-countdown" data-countdown="05/31/2023 19:00:00" style="border-color: var(--bs-blue);background: #212121;">
             <div class="row" style="margin-right: 0px;margin-left: -12px;">
                 <!-- Start: Days -->
                 <div class="col-6 col-md-3 mt-3">
@@ -382,7 +382,7 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header"><button class="btn accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-2" style="font-size: 20px;background: #313131;color: var(--bs-accordion-bg);">When and where is the masterclass and how long it would be?</button></h2>
                             <div id="content-accordion-2" class="accordion-collapse collapse" data-bs-parent="#faqlist">
-                                <p class="accordion-body"> The 3 hour long Hack-n-Slash MasterClass presented by HackersVilla is scheduled at 5 PM to 8 PM on 10th of May, 2023 on Zoom Meetings. You can register now to avail your seat.</p>
+                                <p class="accordion-body"> The 3 hour long Hack-n-Slash MasterClass presented by HackersVilla is scheduled at 7 PM to 10 PM on 31st of May, 2023 on Zoom Meetings. You can register now to avail your seat.</p>
                             </div>
                         </div><!-- End: accordion-item -->
                         <!-- Start: accordion-item -->
