--- a/masterclass/thanks.html
+++ b/masterclass/thanks.html
@@ -78,7 +78,7 @@
             <h1 style="color: rgb(255,199,0);text-align: center;font-size: 22px; font-weight: bolder;">👇 CLICK ON THIS PRIVATE 👇 <br>WHATSAPP BUTTON AND JOIN NOW</h1>
             <p style="color: rgb(255,255,255);text-align: center;"><span style="margin-top: 20px;">Don't Forget to Join Whatsapp Group! Because MasterClass Updates and Links will be Shared In Group Only.</span></p>
             
-            <a class="btn btn-lg" role="button" style="width: 100%; font-size: 30px; font-weight: bold; background-color: #24c55f;" href="https://chat.whatsapp.com/IAKw1zqcvET88iFnrmlnEp"><i class="fa fa-whatsapp"></i> JOIN PRIVATE WHATSAPP GROUP </a>
+            <a class="btn btn-lg" role="button" style="width: 100%; font-size: 30px; font-weight: bold; background-color: #24c55f; color: white;" href="https://chat.whatsapp.com/IAKw1zqcvET88iFnrmlnEp"><i class="fa fa-whatsapp"></i> JOIN PRIVATE WHATSAPP GROUP </a>
 
         </div>
         <footer id="footerpad" style="margin-top: 30px;">
