--- a/terms.html
+++ b/terms.html
@@ -56,7 +56,7 @@
                             </div>
                         </div>
 
-                   <span class="navbar-text"><a data-bss-disabled-mobile="true" data-bss-hover-animate="flash" class="login" href="https://bit.ly/hack-n-slash" style="margin-right: 26px;border-color: rgb(255,255,255);color: rgb(255,255,255);">Book Free Demo</a></span><a class="btn btn-light action-button nav-button" role="button" style="background: var(--bs-blue);font-weight: bold;color: rgb(255, 255, 255);" href="discord">Join Community</a>
+                   <span class="navbar-text"><a data-bss-disabled-mobile="true" data-bss-hover-animate="flash" class="login" href="https://forms.gle/4M86TCfgoyhYKP8g9" style="margin-right: 26px;border-color: rgb(255,255,255);color: rgb(255,255,255);">Book Free Demo</a></span><a class="btn btn-light action-button nav-button" role="button" style="background: var(--bs-blue);font-weight: bold;color: rgb(255, 255, 255);" href="discord">Join Community</a>
                 </div>
             </div>
         </nav>
