--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         <h1 style="text-align: center;font-size: 2rem;font-family: Montserrat, sans-serif;font-weight: bold; color:#8e2de2">BASIC COURSE</h1>
                       
                       <p style="text-align: center;font-family: Montserrat, sans-serif; font-size:1rem; padding: 0 20px;">This course covers every basic aspect of cybersecurity and is designed to cater <strong>Bug Hunting Lovers.</strong><br>
-                        <a style="font-weight: bolder; font-size: 1rem; color:#8e2de2;" href="https://hackersvilla.xyz"><u>Click here</u></a> to download the syllabus for this course.
+                        <a style="font-weight: bolder; font-size: 1rem; color:#8e2de2;" href="https://hackersvilla.xyz/assets/pdf/basic-course.pdf"><u>Click here</u></a> to download the syllabus for Basic Course.
                         </p><br>
                       
                       <ul class="fa-ul">
@@ -223,7 +223,7 @@
             <div class="row">
                 <div class="col">
                     <p style="text-align: center;font-family: Montserrat, sans-serif; font-size:1rem; padding: 0 20px;">Explore cybersecurity from beginner to advanced levels in an exciting course designed for newcomers and experts as well!<br>
-                    <a style="font-weight: bolder; font-size: 1rem; color:#8e2de2;" href="https://hackersvilla.xyz"><u>Click here</u></a> to download the syllabus for this course.
+                    <a style="font-weight: bolder; font-size: 1rem; color:#8e2de2;" href="https://hackersvilla.xyz/assets/pdf/advanced-course.pdf"><u>Click here</u></a> to download the syllabus for Advanced Course.
                     </p><br>
                 </div>
             </div>
