--- a/shipping.html
+++ b/shipping.html
@@ -82,7 +82,7 @@
                 <li><b>3. </b> In the unlikely event that we are unable to deliver a product immediately after purchase, we will notify you as soon as possible.</li>
                 <li><b>4. </b>All our products are delivered digitally and there is no postal delivery method.</li>
                 <li><b>5. </b> We encourage you to keep your email address and other contact information up to date to ensure you get the access you need.</li>
-                <li><b>6. </b> If you have any questions or problems with the delivery of the product, please feel free to contact us. We will do our best to resolve any problems and can be accessed via this URL: <a href="https://www.hackersvilla.xyz/contact"></a>https://www.hackersvilla.xyz/contact</li>
+                <li><b>6. </b> If you have any questions or problems with the delivery of the product, please feel free to contact us. We will do our best to resolve any problems and can be accessed via this URL: <a href="https://www.hackersvilla.xyz/contact">https://www.hackersvilla.xyz/contact</a></li>
             </ul>
             <br><br>
         </p>
