--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <meta property="og:title" content="HackersVilla Cybersecurity | Learn Ethical Hacking Online" />
     <meta property="og:description" content="HackersVilla is a professional cybersecurity training platform. Ab India Bolega - Cybersecurity as a Profession!" />
-    <meta property="og:image" content="https://hackersvilla.xyz/masterclass/assets/img/og_image.jpg" />
+    <meta property="og:image" content="https://hackersvilla.xyz/assets/img/1.jpg" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_GB" />
 
