--- a/workshop/index.html
+++ b/workshop/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Hack-n-Slash MasterClass | HackersVilla CyberSecurity</title>
+    <title>Hack-n-Slash Workshop | HackersVilla CyberSecurity</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -39,9 +39,9 @@
     </noscript>
     <!-- End Facebook Pixel Code -->
     
-    <meta property="og:title" content="Hack-n-Slash MasterClass | Learn Ethical Hacking Online" />
-    <meta property="og:description" content="Discover the Smartest and the Simplest way to Hack any website or OS in 60 minutes. Register now and win bonuses worth ₹25000." />
-    <meta property="og:image" content="https://hackersvilla.xyz/masterclass/assets/img/og_image.jpg" />
+    <meta property="og:title" content="Hack-n-Slash Workshop | Learn Ethical Hacking Online" />
+    <meta property="og:description" content="Discover the Smartest and the Simplest way to Hack any website or OS in 60 minutes. Register now and win bonuses worth ₹6000." />
+    <meta property="og:image" content="https://hackersvilla.xyz/workshop/assets/img/og_image.jpg" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_GB" />
 
@@ -434,23 +434,23 @@
    
     <div class="container">
         <h1 style="text-align: center;font-size: 40px;margin-top: 65px;padding-right: 20px;padding-left: 20px;color: var(--bs-yellow);">Still Don't Believe...?</h1>
-        <h1 style="text-align: center;font-size: 20px;padding: 0 20px;margin-top: 20px;">Have A Look At The Results We Have Brought For Our Students after this MasterClass (prev known as bootcamp)</h1><!-- Start: Lightbox Gallery -->
+        <h1 style="text-align: center;font-size: 20px;padding: 0 20px;margin-top: 20px;">Have A Look At The Results We Have Brought For Our Students after this Workshop (prev known as bootcamp)</h1><!-- Start: Lightbox Gallery -->
         <section class="py-4 py-xl-5">
             <div class="container">
                 <!-- Start: Photos -->
                 <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3" data-bss-baguettebox="">
 
-                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r1.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px; border: solid 2px#fff; border-radius: 15px;" src="https://hackersvilla.xyz/masterclass/assets/img/r1.png"></a></div>
+                    <div class="col"><a href="https://hackersvilla.xyz/workshop/assets/img/r1.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px; border: solid 2px#fff; border-radius: 15px;" src="https://hackersvilla.xyz/workshop/assets/img/r1.png"></a></div>
 
-                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r2.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px; border: solid 2px#fff; border-radius: 15px;" src="https://hackersvilla.xyz/masterclass/assets/img/r2.png"></a></div>
+                    <div class="col"><a href="https://hackersvilla.xyz/workshop/assets/img/r2.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px; border: solid 2px#fff; border-radius: 15px;" src="https://hackersvilla.xyz/workshop/assets/img/r2.png"></a></div>
 
-                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r3.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px; border: solid 2px#fff; border-radius: 15px;" src="https://hackersvilla.xyz/masterclass/assets/img/r3.png"></a></div>
+                    <div class="col"><a href="https://hackersvilla.xyz/workshop/assets/img/r3.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px; border: solid 2px#fff; border-radius: 15px;" src="https://hackersvilla.xyz/workshop/assets/img/r3.png"></a></div>
 
-                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r4.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px; border: solid 2px#fff; border-radius: 15px;" src="https://hackersvilla.xyz/masterclass/assets/img/r4.png"></a></div>
+                    <div class="col"><a href="https://hackersvilla.xyz/workshop/assets/img/r4.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px; border: solid 2px#fff; border-radius: 15px;" src="https://hackersvilla.xyz/workshop/assets/img/r4.png"></a></div>
 
-                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r5.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px; border: solid 2px#fff; border-radius: 15px;" src="https://hackersvilla.xyz/masterclass/assets/img/r5.png"></a></div>
+                    <div class="col"><a href="https://hackersvilla.xyz/workshop/assets/img/r5.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px; border: solid 2px#fff; border-radius: 15px;" src="https://hackersvilla.xyz/workshop/assets/img/r5.png"></a></div>
 
-                    <div class="col"><a href="https://hackersvilla.xyz/masterclass/assets/img/r6.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px; border: solid 2px#fff; border-radius: 15px;" src="https://hackersvilla.xyz/masterclass/assets/img/r6.png"></a></div>
+                    <div class="col"><a href="https://hackersvilla.xyz/workshop/assets/img/r6.png"><img class="img-fluid" style="object-fit:cover; width:500px; height:350px; margin:10px 10px; border: solid 2px#fff; border-radius: 15px;" src="https://hackersvilla.xyz/workshop/assets/img/r6.png"></a></div>
                 </div><!-- End: Photos -->
             </div>
         </section><!-- End: Lightbox Gallery -->
@@ -650,7 +650,7 @@
         document.getElementById("mc-register").value="LOADING.. Please Wait";
           e.preventDefault()
           fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-            .then(response => location.href='https://hackersvilla.xyz/hacknslash-masterclass-thank-you')
+            .then(response => location.href='https://hackersvilla.xyz/hacknslash-workshop-thank-you')
             .catch(error => console.error('Error!', error.message))
         })
       </script>
