--- a/workshop/thanks.html
+++ b/workshop/thanks.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-        <title>Confirmation Page | Hack-n-Slash MasterClass</title>
+        <title>Confirmation Page | Hack-n-Slash Workshop</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -57,7 +57,7 @@
                     </div>
                     <div class="row">
                         <div class="col">
-                            <p style="color: rgb(255,255,255);text-align: center;">Your VIP Pass To: <br>2 Hour Long Hack-n-Slash MasterClass has been Booked!</p>
+                            <p style="color: rgb(255,255,255);text-align: center;">Your VIP Pass To: <br>2 Hour Long Hack-n-Slash Workshop has been Booked!</p>
                         </div>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
         </section>
         <div class="container">
             <h1 style="color: rgb(255,199,0);text-align: center;font-size: 22px; font-weight: bolder;">👇 CLICK ON THIS PRIVATE 👇 <br>WHATSAPP BUTTON AND JOIN NOW</h1>
-            <p style="color: rgb(255,255,255);text-align: center;"><span style="margin-top: 20px;">Don't Forget to Join Whatsapp Group! Because MasterClass Updates and Links will be Shared In Group Only.</span></p>
+            <p style="color: rgb(255,255,255);text-align: center;"><span style="margin-top: 20px;">Don't Forget to Join Whatsapp Group! Because Workshop Updates and Links will be Shared In Group Only.</span></p>
             
             <a class="btn btn-lg" role="button" style="width: 100%; font-size: 30px; font-weight: bold; background-color: #24c55f; color: white;" href="https://chat.whatsapp.com/IAKw1zqcvET88iFnrmlnEp"><i class="fa fa-whatsapp"></i> JOIN PRIVATE WHATSAPP GROUP </a>
 
