--- a/refund.html
+++ b/refund.html
@@ -92,31 +92,27 @@
         <p>
             Thanks for shopping at HackersVilla. We appreciate the fact that you like to buy the stuff we build. We also want to make sure you have a rewarding experience while you’re exploring, evaluating, and purchasing our products.
             <br><br>
-            As with any shopping experience, there are terms and conditions that apply to transactions at HackersVilla. We’ll be as brief as our attorneys will allow. The main thing to remember is that by placing an order or making a purchase at HackersVilla, you agree to the terms set forth below along with HackersVilla’s Privacy Policy.
+            As with any shopping experience, there are terms and conditions that apply to transactions at HackersVilla. We’ll be as brief as our attorneys will allow. The main thing to remember is that by placing an order or making a purchase at HackersVilla (payment done on the name of Sanchay Singh, Aditi Chauhan or HackersVilla Cybersecurity), you agree to the terms set forth below along with HackersVilla’s Privacy Policy.
             <br><br>
-            Please note that we only provide refund only on our paid and non-discounted course and not on any webinar(s), masterclass(es) or bootcamp(s).
-            If there’s something wrong with the product you bought, or if you are not happy with it, you have 10 days after 30 days of enrollment into the course to issue a refund and 100% of paid amound will be returned within 7-10 working days. Make sure you ask the refund atleast after 30 days of the purchase or the request would not be taken into account.
+            Please note that we do not provide refund on our paid and non-discounted course and also not on any webinar(s), masterclass(es) or bootcamp(s).
+            If there’s something wrong with the product you bought, or if you are not happy with it, we can not help you in that. Alternatively, we will give you access to all our recordings, will allot other batches to you so that you can still learn and grow.
             <br><br>
             If you would like to return a product, the only way would be if you follow the next guidelines:
             
             <br>-Write a mail to support@hackersvilla.xyz or hackersvilla.xyz@gmail.com regarding your concern and the reasons why you are unhappy with the product.
-            <br>-You will get a reply from us and a refund will be processed on proper review.
+            <br>-You will get a reply from us.
             <br><br>
         </p>
 
         <h3>Refunds</h3>
         <p>
-            We at HackersVilla commit ourselves to serving our customers with the best products. Every single product that you choose is thoroughly inspected, checked for defects and packaged with utmost care. We do this to ensure that you fall in love with our products.
+            We at HackersVilla commit ourselves to serving our customers with the best trainings. Every single training that you choose is thoroughly inspected and then the acess is provided to you. All our online trainings (Live and Recorded) are Non-tangible irrevocable goods ("Digital products"). 
             <br>
-            Sadly, there are times when we may not have the product(s) that you choose in stock, or may face some issues with our inventory and quality check. In such cases, we may have to cancel your order. You will be intimated about it in advance so that you don't have to worry unnecessarily about your order. If you have purchased via Online payment (not Cash on Delivery), then you will be refunded once our team confirms your request.
-            <br>
-            We carry out thorough quality check before processing the ordered item. We take utmost care while packing the product. At the same time we ensure that the packing is good such that the items won’t get damaged during transit. Please note that HackersVilla is not liable for damages that are caused to the items during transit or transportation.
-            <br>
-            We will revise your returned product as soon as we receive it and if it follows the guidelines addressed above, we will proceed to issue a refund of your purchase. Your refund may take a couple of days to process but you will be notified when you receive your money.
+            We do not issue refunds for non-tangible irrevocable goods ("digital products") once the order is confirmed and the product is sent.
             <br><br>
         </p>
 
-        <h3>Shipping</h3>
+        <h3>Shipping (if Physical Product)</h3>
         <p>
             HackersVilla is responsible for return shipping costs. Every returning shipping is paid by HackersVilla, even if the item didn’t have free shipping in the first place. 
             <br><br>
@@ -130,7 +126,7 @@
 
         <h3>Changes To Our Return & Refund Policy</h3>
         <p>
-            Should we update, amend or make any changes to this document so that they accurately reflect our Service and policies. Unless otherwise required by law, those changes will be prominently posted here. Then, if you continue to use the Service, you will be bound by the updated Return & Refund Policy. If you do not want to agree to this or any updated Return & Refund Policy, you can delete your account.
+            Should we update, amend or make any changes to this document so that they accurately reflect our Service and policies. Unless otherwise required by law, those changes will be prominently posted here. Then, if you continue to use the Service, you will be bound by the updated Return & Refund Policy. By paying for our trainings, you agree to this or any updated Return & Refund Policy.
             <br><br>
         </p>
 
@@ -168,7 +164,7 @@
 
         <div class="col-md-4 footer-about">
             <h4>About the company</h4>
-            <p>HackersVilla CyberSecurity provides Quality Professional Training with Live Mentors and is based on the Learn & Earn Approach. The company focuses on changing the way of teaching cybersecurity and producing more researchers in the field.</p>
+            <p>HackersVilla CyberSecurity provides Quality Professional Trainings with Live Mentors and is based on the Learn & Earn Approach. The company focuses on changing the way of teaching cybersecurity and producing more researchers in the field.</p>
             <div class="social-links social-icons"><a href="https:///hackersvilla.xyz/discord" target=”_blank”><i class="fa-brands fa-discord" style="border-color: var(--bs-blue);color: var(--bs-white);"></i></a><a href="https://instagram.com/hackersvillaxyz" target=”_blank”><i class="fa fa-instagram" style="color: var(--bs-white);"></i></a><a href="https://linkedin.com/company/hackersvilla" target=”_blank” target=”_blank”><i class="fa fa-linkedin" style="color: var(--bs-white);"></i></a><a href="https://youtube.com/hackersvillacybersecurity" target=”_blank”><i class="fa fa-youtube" style="color: var(--bs-white);"></i></a></div>
         </div>
     </div>
