--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                         <div class="col-12 col-md-6" style=" text-align: center; ">
                             <font id="basic_price" style="font-weight: 700; text-align: center; font-size: 3rem; color: #6F42C1; margin-bottom:20px; margin-top:8px;">₹5,999</font><sub style="font-size: 0.75rem; color: rgb(40, 40, 40); font-weight: 500;"> (Incl. of all taxes)</sub>
                         </div>
-                        <div class="col-12 col-md-6" style="text-align: center; margin-top: 5px;"><a id="ba_button" href="https://hackersvilla.mojo.page/basic-course" class="btn" type="button" style="background:linear-gradient(to right, #8e2de2, #4a00e0); color:white; text-align: center; height: fit-content;  font-weight: 500; font-size: 1.5rem; padding:15px; border-radius: 60px; width: 100%; ">Enroll Now</a></div>
+                        <div class="col-12 col-md-6" style="text-align: center; margin-top: 5px;"><a id="ba_button" href="https://api.whatsapp.com/send/?phone=918958487060&text=Hi+there,+I+want+to+purchase+the+Basic+Hacker+Course!" class="btn" type="button" style="background:linear-gradient(to right, #8e2de2, #4a00e0); color:white; text-align: center; height: fit-content;  font-weight: 500; font-size: 1.5rem; padding:15px; border-radius: 60px; width: 100%; ">Enroll Now</a></div>
                     </div>
                     
                     </div>
@@ -309,7 +309,7 @@
                 <div class="col-12 col-md-6" style=" text-align: center; ">
                     <font id="advance_price" style="font-weight: 700; text-align: center; font-size: 3rem; color: #6F42C1; margin-bottom:20px; margin-top:8px;">₹19,999</font><sub style="font-size: 0.75rem; color: rgb(40, 40, 40); font-weight: 500;"> (Incl. of all taxes)</sub>
                 </div>
-                <div class="col-12 col-md-4" style="text-align: center; margin-top: 5px;"><a id="ad_button" class="btn" type="button" href="https://hackersvilla.mojo.page/advanced-course" style="background:linear-gradient(to right, #8e2de2, #4a00e0); color:white; text-align: center; height: fit-content;  font-weight: 500; font-size: 1.5rem; padding:15px; border-radius: 60px; width: 100%; ">Enroll Now</a></div>
+                <div class="col-12 col-md-4" style="text-align: center; margin-top: 5px;"><a id="ad_button" class="btn" type="button" href="https://api.whatsapp.com/send/?phone=918958487060&text=Hi+there,+I+want+to+purchase+the+Advanced+Hacker+Course!" style="background:linear-gradient(to right, #8e2de2, #4a00e0); color:white; text-align: center; height: fit-content;  font-weight: 500; font-size: 1.5rem; padding:15px; border-radius: 60px; width: 100%; ">Enroll Now</a></div>
             </div>
         </div>
     </div>
