--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                                         <div class="category-menu-wrap mr-5">
                                             <a class="menu-expand"><i class="fa-solid fa-grid-2 me-2"></i>Search Here</a>
                                             
-                                            <form class="search-form">
+                                            <form class="search-form" action="https://explore.hackersvilla.xyz/s/store/courses" method="GET">
                                                 <input type="text" placeholder="Type Anything...">
                                                 <button type="submit"><i class="far fa-search"></i></button>
                                             </form>
